payment rent complete

--- a/Views/Homeowner/Dashboard.cshtml
+++ b/Views/Homeowner/Dashboard.cshtml
@@ -36,15 +36,15 @@
             <div class="property-meta">
                 <div class="meta-item">
                     <span class="meta-label">Monthly Payment</span>
-                    <span class="meta-value">$8,500</span>
+                    <span class="meta-value" id="monthlyPayment"></span>
                 </div>
                 <div class="meta-item">
                     <span class="meta-label">Payment Status</span>
-                    <span class="meta-value status-paid">Paid</span>
+                    <span class="meta-value status-paid" id="paymentStatus"></span>
                 </div>
                 <div class="meta-item">
                     <span class="meta-label">Next Due</span>
-                    <span class="meta-value">July 1, 2023</span>
+                    <span class="meta-value" id="nextDueDate"></span>
                 </div>
             </div>
             
