--- a/Views/Shared/Dashboard_Layout.cshtml
+++ b/Views/Shared/Dashboard_Layout.cshtml
@@ -379,6 +379,9 @@
          <li class="nav-item">
             <a asp-controller="Homeowner" asp-action="Events" class="nav-link">Events</a>
         </li>
+         <li class="nav-item">
+            <a asp-controller="Homeowner" asp-action="Documents" class="nav-link">Documents</a>
+        </li>
     </ul>
 
     <!-- User Profile and Hamburger Container -->
